# pst-alpha

./: .clang-format  .gitignore  CMakeLists.txt  README.md  generate_inline_shaders.py  start_server.sh
emscripten/: build_wasm.sh  index.html
examples/: example_cellular_automata.json  example_cubes_wave.json  example_simple_quads.json  example_voxel_cellular_automata.json  example_vr_cellular_automata.json
include/: lc_mini_math.hpp
include/app/: app.hpp  glgeom.hpp  glutil.hpp  log.hpp  platform.hpp  shaders.hpp  util.hpp
include/glad/: glad.h
shaders/: common_uniforms.glsl  mesh.glsl  render.glsl  shade_fs.glsl  shade_vs.glsl  simulate.glsl  simulation_fs.glsl  simulation_vs.glsl  texture.glsl  user_default.glsl  user_default_common.glsl  user_default_fragment.glsl  user_default_simulation.glsl  user_default_texture.glsl  user_default_vertex.glsl
src/app/: app.cpp  glgeom.cpp  glutil.cpp  log.cpp  util.cpp
src/emscripten/: main.cpp
src/glad/: glad.c
web/: .gitignore  index.html  main.js  renderer.js  style.css
